Fix double scroll, minify css, improve hire me button responsive

--- a/css/style.styl
+++ b/css/style.styl
@@ -82,6 +82,7 @@ html
 	@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
 		col(1,1)
 		font-size 1.5rem
+		height auto
 	
 	.archive
 		padding 1rem
@@ -249,7 +250,11 @@ html
 			text-shadow( none )
 
 			@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
+				background white
+				border-radius(4rem)
+				color millennial
 				font-size 4rem
+				padding 1rem 4rem
 			
 			&:hover
 				background white
@@ -289,7 +294,7 @@ html
 		width 100%
 
 		@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
-			top 250px
+			top 225px
 		
 		ul
 			list-style none
